--- a/public/historiskVejrData.html
+++ b/public/historiskVejrData.html
@@ -10,8 +10,8 @@
     <h1>Her ses vejdata for de sidste 30 dage</h1>
     
     <div id="vejrinfo" >
-        <div id="date"></div>
-        <div id="temp"></div>
+        <div id="date1"></div>
+        <div id="temp1"></div>
     </div>
 
 
