--- a/public/index.html
+++ b/public/index.html
@@ -31,11 +31,12 @@
 
         <div>
           <div id="topbar">
+            
             <div id="iconsearchbar">
-              <p class="gg-search"></p>
+              <i class="fa fa-search"></i>
               <input
                 id="searchbar"
-                type="text"
+                type="search" datasearch
                 placeholder="Søg efter ny musik, nyheder, kunstnere..."
               />
             </div>
@@ -47,7 +48,7 @@
               <span class="dividerlogin"></span>
               <p id="logout"></p>
             </div>
-          </div>
+          </div>  
 
           <div id="indholdtilsiden">
             <div id="allNews">
@@ -252,6 +253,7 @@
   <script src="scripttimeweather.js"></script>
   <script src="overall.js"></script>  
   <script src="scriptnews.js"></script>
+  <script src="newsSearch.js"></script>
 
   <script src="https://code.iconify.design/iconify-icon/1.0.1/iconify-icon.min.js"></script>
   <!-- solopgang icon Taget fra https://code.iconify.design/ -->
