--- a/public/historiskVejrData.html
+++ b/public/historiskVejrData.html
@@ -9,15 +9,17 @@
 <body>
     <h1>Her ses vejdata for de sidste 30 dage</h1>
     
-    <div id="vejrinfo" >
-        <div id="date1"></div>
-        <div id="temp1"></div>
-    </div>
 
+    
+ 
 
     <a href="index.html">Tilbage til forsiden</a>
+
+
 </body>
 
 <script src="historiskVejrData.js"></script>
+
+<script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
 
 </html>
