--- a/public/historiskVejrData.html
+++ b/public/historiskVejrData.html
@@ -6,14 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vejrdata fra de sidste 30 dage.</title>
 </head>
+
+
+<style>
+p {
+  display: inline-block;
+  margin-right: 10px;
+}
+
+
+
+</style>
+
+
+
 <body>
     <h1>Her ses vejdata for de sidste 30 dage</h1>
     
 
-    
- 
-
     <a href="index.html">Tilbage til forsiden</a>
+<br>
+
+
 
 
 </body>
