--- a/public/manage.html
+++ b/public/manage.html
@@ -5,7 +5,9 @@
   </head>
   <body>
     <a href="delete.html">Klik her hvis du vil slette din profil</a>
+  <button id="sletProfil">klik her for at slette profil</button>
     <br />
     <a href="update.html">Klik her hvis du vil opdatere din profil</a>
   </body>
+  <script src="manage.js"></script>
 </html>
