--- a/public/favorites.html
+++ b/public/favorites.html
@@ -8,8 +8,11 @@
 </head>
 <body>
     
+    <h1>Gemte Artikler</h1>
+    <div id="favorites-container"></div>
 
-    
 
 </body>
+
+<script src="favorites.js"></script>
 </html>
