--- a/public/manage.html
+++ b/public/manage.html
@@ -4,10 +4,16 @@
     <title>Manage</title>
   </head>
   <body>
-    <a href="delete.html">Klik her hvis du vil slette din profil</a>
-  <button id="sletProfil">klik her for at slette profil</button>
+    <button id="delete">Klik her hvis du vil slette din profil</button>
     <br />
-    <a href="update.html">Klik her hvis du vil opdatere din profil</a>
+    <br />
+    <br />
+    <a href="updateUser.html">Klik her hvis du vil opdatere din profil</a>
+    <br>
+    <br />
+    <br />
+    <a href="readArticles.html">Klik her hvis du vil se din historik over læste artikler</a>
   </body>
+ 
   <script src="manage.js"></script>
 </html>
