--- a/public/login.html
+++ b/public/login.html
@@ -14,10 +14,13 @@
       <label for="password">Adgangskode</label>
       <input type="password" name="password" id="password" class="forms" />
       <br />
-      <button id="login">Log på</button>
+      <!-- <button id="login">Log på</button> -->
+      <a class="button1" id="login">Log På</a>
+
 
       <p id="wrong"></p>
     </div>
   </body>
   <script src="login.js"></script>
+  
 </html>
