--- a/public/manage.html
+++ b/public/manage.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>Manage</title>
-  </head>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="manage.css">
   <body>
-    <button id="delete">Klik her hvis du vil slette din profil</button>
-    <br />
-    <br />
-    <br />
-    <a href="updateUser.html">Klik her hvis du vil opdatere din profil</a>
-    <br>
-    <br />
-    <br />
-    <a href="readArticles.html">Klik her hvis du vil se din historik over læste artikler</a>
+    <div class="article">
+      <!-- <button id="delete" class="button1">Slet din profil</button> -->
+      <a id="delete" class="button1">Slet din profil</a>
+
+      <a href="updateUser.html" class="button1">Opdater din profil</a>
+
+
+      <a href="readArticles.html" class="button1">Historik over læste artikler</a>
+    </div>
   </body>
  
   <script src="manage.js"></script>
