--- a/public/opret.html
+++ b/public/opret.html
@@ -23,7 +23,9 @@
       <label for="password">Kodeord</label>
       <input type="password" name="password" id="password" class="forms" />
       <br />
-      <button id="create">Opret bruger</button>
+      <!-- <button id="create">Opret bruger</button> -->
+      <a class="button1" id="create">Opret Bruger</a>
+
     </div>
   </body>
 
