--- a/public/readArticles.html
+++ b/public/readArticles.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="readArticles.css">
+
+    <title>Læste Artikler</title>
 </head>
 <body>
     
-    <h1>Læste Articler</h1>
+    <h1>Læste Artikler</h1>
     <div id="read-container"></div>
 
 
