Gjort så søgemekanisme søger i DB

--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,9 @@
     <link rel="stylesheet" href="styleoverall.css" />
     <link rel="stylesheet" href="stylenews.css" />
     <link rel="stylesheet" href="styletimeweather.css" /> 
-    <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
+    <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
-    <!--Link til hjerte og hus icon, bruger icon, log ud icon-->
-    <!--Link til loop icon-->
   </head>
   <body>
     <div id="overalldiv">
@@ -256,7 +254,7 @@
   <script src="scripttimeweather.js"></script>
   <script src="overall.js"></script>  
   <script src="scriptnews.js"></script>
-  <script src="newsSearch.js"></script>
+  <script type="module" src="newsSearch.js"></script>
 
   <script src="https://code.iconify.design/iconify-icon/1.0.1/iconify-icon.min.js"></script>
   <!-- solopgang icon Taget fra https://code.iconify.design/ -->
