Søgefunktionen, viser nu "ingen resultater"

--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
               <i class="fa fa-search"></i>
               <input
                 id="searchbar" id="search"
-                type="search" datasearch
+                type="search" autocomplete="off" datasearch
                 placeholder="Søg efter ny musik, nyheder, kunstnere..."
               />
               <div class="user-cards" data-article-cards-container></div>
